<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.baibian.activity.EditPersonalInformationActivity">

    <LinearLayout
        android:divider="@drawable/divider_bg"
        android:layout_marginTop="@dimen/user_information_margin_start"
        android:layout_marginStart="@dimen/user_information_margin_start"
        android:layout_marginEnd="@dimen/user_information_margin_start"
        android:orientation="vertical"
        android:id="@+id/portrait_and_signature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:padding="@dimen/general_user_small_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/other_small_text_size"
                android:text="@string/portrait"
                android:textColor="@color/text_color_pure_black_user_information"/>
            <ImageView
                android:layout_centerVertical="true"
                android:id="@+id/portrait_arrow"
                android:src="@drawable/popicon_listpage"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
        <RelativeLayout
            android:padding="@dimen/general_user_small_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/signature"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/other_small_text_size"
                android:text="@string/signature"
                android:textColor="@color/text_color_pure_black_user_information"/>
            <EditText
                android:id="@+id/signature_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:text="个人签名的地方"
                android:layout_centerVertical="true"
                android:textColor="@color/text_color_pure_black_user_information"
                android:textSize="@dimen/other_small_text_size"
                android:layout_toEndOf="@id/signature"
                android:layout_marginStart="@dimen/user_information_margin_start"/>
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="@dimen/user_information_margin_start"
        android:layout_marginStart="@dimen/user_information_margin_start"
        android:layout_marginEnd="@dimen/user_information_margin_start"
        android:layout_marginBottom="@dimen/user_information_margin_start"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:padding="@dimen/general_user_small_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/nick_name"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/other_small_text_size"
                android:text="@string/nick_name"
                android:textColor="@color/text_color_pure_black_user_information"/>
            <EditText
                android:id="@+id/nick_name_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="昵称的地方"
                android:background="@null"
                android:layout_centerVertical="true"
                android:textColor="@color/text_color_pure_black_user_information"
                android:textSize="@dimen/other_small_text_size"
                android:layout_toEndOf="@id/nick_name"
                android:layout_marginStart="@dimen/user_information_margin_start"/>
        </RelativeLayout>
        <RelativeLayout
            android:padding="@dimen/general_user_small_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/gender"
                android:layout_centerVertical="true"
                android:text="@string/gender"
                android:textSize="@dimen/other_small_text_size"
                android:textColor="@color/text_color_pure_black_user_information"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Spinner
                android:id="@+id/gender_spinner"
                android:layout_alignParentEnd="true"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/gender"
                android:layout_marginStart="@dimen/user_information_margin_start">

            </Spinner>
        </RelativeLayout>
        <RelativeLayout
            android:padding="@dimen/general_user_small_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/birth_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/birth_date"
                android:layout_centerVertical="true"
                android:textSize="@dimen/other_small_text_size"
                android:textColor="@color/text_color_pure_black_user_information" />
            <TextView
                android:id="@+id/birth_date_content"
                android:layout_toEndOf="@id/birth_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/user_information_margin_start"
                android:text="1999-7-26"
                android:layout_centerVertical="true"
                android:textSize="@dimen/other_small_text_size"
                android:textColor="@color/text_color_pure_black_user_information" />
            <ImageView
                android:id="@+id/birth_date_arrow"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_action_more"/>
        </RelativeLayout>
    </LinearLayout>
    
    <LinearLayout
        android:orientation="vertical"
        android:layout_margin="@dimen/user_information_margin_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:padding="@dimen/general_user_small_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/phone_number"
                android:textColor="@color/text_color_pure_black_user_information"
                android:textSize="@dimen/other_small_text_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/phone_number"/>
            <TextView
                android:id="@+id/phone_number_content"
                android:text="1234567890"
                android:textSize="@dimen/other_small_text_size"
                android:textColor="@color/text_color_pure_black_user_information"
                android:layout_toEndOf="@id/phone_number"
                android:layout_marginStart="@dimen/user_information_margin_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
        <RelativeLayout
            android:padding="@dimen/general_user_small_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/email_number"
                android:textColor="@color/text_color_pure_black_user_information"
                android:textSize="@dimen/other_small_text_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/email_number"/>
            <TextView
                android:id="@+id/email_number_content"
                android:text="1234567890"
                android:textSize="@dimen/other_small_text_size"
                android:textColor="@color/text_color_pure_black_user_information"
                android:layout_toEndOf="@id/email_number"
                android:layout_marginStart="@dimen/user_information_margin_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
        <RelativeLayout
            android:padding="@dimen/general_user_small_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/residence"
                android:text="@string/residence"
                android:textSize="@dimen/other_small_text_size"
                android:textColor="@color/text_color_pure_black_user_information"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/province"
                android:textSize="@dimen/other_small_text_size"
                android:textColor="@color/text_color_pure_black_user_information"
                android:layout_marginStart="@dimen/user_information_margin_start"
                android:layout_toEndOf="@id/residence"
                android:layout_centerVertical="true"
                android:text="陕西省"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <ImageView

                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_action_more"/>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
